# to-do-list

./: .cta.json  .dockerignore  .gitignore  CATEGORY_FEATURE.md  DEPLOYMENT.md  DOCKER_REFERENCE.md  Dockerfile  README.md  docker-compose.yml  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.gemini/previews/: README_backup.md
.github/: ACTIONS_SETUP.md
.github/workflows/: docker-build.yml  package.yml  release.yml
scripts/: dev.mjs  prepare-tauri-resources.mjs  run-cargo.mjs  tauri-before-build.mjs  tauri-before-dev.mjs
src/: db.ts  routeTree.gen.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: gtd-server.rs
src-tauri/src/: backend.rs  main.rs
src/components/: Calendar.tsx  CategoryManager.tsx  DataToolbar.tsx  Statistics.tsx
src/routes/: categories.tsx  index.tsx  statistics.tsx
