[package]
name = "gtd-desktop"
version = "0.1.0"
description = "GTD Desktop App"
authors = ["hikaru"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "=1.5.5", features = [] }

[dependencies]
tauri = { version = "=1.8.3", features = ["dialog-all"], optional = true }
tempfile = "=3.14.0"
uuid = { version = "=1.11.0", features = ["v4"] }
axum = "0.7"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
globset = "=0.4.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
time = "=0.3.36"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "fs"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["desktop-app"]
desktop-app = ["tauri", "tauri/custom-protocol"]
